# MASFENON

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  doxygen_config_dox.conf  doxygen_config_latex.conf  examples.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml
data/testFitting/interactions/: typesInteraction-general.tsv
data/testFitting/syntheticTimeSeries/: t0.tsv  t1.tsv  t2tsv  t3.tsv
docs/: Building.html  Checkpoint_8cxx.html  Checkpoint_8cxx__incl.map  Checkpoint_8cxx__incl.md5  Checkpoint_8hxx.html  Checkpoint_8hxx__dep__incl.map  Checkpoint_8hxx__dep__incl.md5  Checkpoint_8hxx__incl.map  Checkpoint_8hxx__incl.md5  Checkpoint_8hxx_source.html  ComputationTesting_8cxx.html  ComputationTesting_8cxx__incl.map  ComputationTesting_8cxx__incl.md5  ComputationVectorized_8cxx.html  ComputationVectorized_8cxx__incl.map  ComputationVectorized_8cxx__incl.md5  ComputationVectorized_8hxx.html  ComputationVectorized_8hxx__dep__incl.map  ComputationVectorized_8hxx__dep__incl.md5  ComputationVectorized_8hxx_source.html  Computation_8cxx.html  Computation_8cxx__incl.map  Computation_8cxx__incl.md5  Computation_8hxx.html  Computation_8hxx__dep__incl.map  Computation_8hxx__dep__incl.md5  Computation_8hxx__incl.map  Computation_8hxx__incl.md5  Computation_8hxx_source.html  ConservationModelVectorized_8cxx.html  ConservationModelVectorized_8cxx__incl.map  ConservationModelVectorized_8cxx__incl.md5  ConservationModelVectorized_8hxx.html  ConservationModelVectorized_8hxx__dep__incl.map  ConservationModelVectorized_8hxx__dep__incl.md5  ConservationModelVectorized_8hxx__incl.map  ConservationModelVectorized_8hxx__incl.md5  ConservationModelVectorized_8hxx_source.html  ConservationModel_8cxx.html  ConservationModel_8cxx__incl.map  (+510 more)
docs/manual_doxygen/: index.dox
docs/manual_doxygen/basics/: index.dox
docs/manual_doxygen/building/: index.dox
docs/manual_doxygen/examples/: index.dox
docs/manual_markdown/: building.md  generalDocumentation.md  mainpage.md  visualization.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  (+61 more)
manual_markdown/: building.md  core.dox  experimental.dox  fitting.md  mainpage.md  mains.dox
scripts/bash/examples/: runAllExamples.sh
scripts/bash/singleCell/: createNewParametersFromMSEtable.sh  final-simulation-predefined-values.sh  fit-and-run-simulation.sh  simulation.conf  simulation_1h.sh  simulation_1h_withLR.sh  simulation_custom_parameters.sh  simulation_general_withLR.sh  simulation_multiple_withLR.sh
scripts/bash/valgrind/: mpi-run-valgrind-testgraph.sh  run-valgrind-singlecell.sh  run-valgrind-testgraph.sh
scripts/generalFitting/: README.md  computeRMSE-fromErrorMatrix.py  createErrorMatrix.py  createParametersFromError.py  createParametersIterationAware-singleParameter.py  createParametersIterationAware.py  createParametersIterationAwareWithParameterSelection.py  fit_driver.sh  fit_driver_enhanced.sh  fit_driver_finer_select.sh  plotRMSE_file.py  requirements.txt  tuneParameters.sh
scripts/performanceBenchmarking/: README.MD
scripts/performanceBenchmarking/30000Nodes/: communities.tsv  edge_data.tsv  node_conditions.tsv
scripts/performanceBenchmarking/MASFENON/: runSimulation.sh
scripts/performanceBenchmarking/NDlib/: requirements.txt  runSimulations.sh  simulation.py
scripts/performanceBenchmarking/netlogo/: simulation.nlogo  simulationEpidemics.nlogo  simulationFinal.nlogo
scripts/performanceBenchmarking/plotResults/: plot.py  requirements.txt
src/: CustomFunctions.cxx  CustomFunctions.hxx
src/checkpoint/: Checkpoint.cxx  Checkpoint.hxx
src/computation/: Computation.cxx  Computation.hxx  ComputationVectorized.cxx  ConservationModel.cxx  ConservationModel.hxx  ConservationModelVectorized.cxx  ConservationModelVectorized.hxx  DissipationModel.cxx  DissipationModel.hxx  DissipationModelPeriodic.cxx  DissipationModelPeriodic.hxx  DissipationModelPeriodicVectorized.cxx  DissipationModelPow.cxx  DissipationModelPow.hxx  DissipationModelPowVectorized.cxx  DissipationModelRandom.cxx  DissipationModelRandom.hxx  DissipationModelRandomVectorized.cxx  DissipationModelScaled.cxx  DissipationModelScaled.hxx  DissipationModelScaledVectorized.cxx  DissipationModelScaledVectorized.hxx  DissipationModelVectorized.cxx  DissipationModelVectorized.hxx  PropagationModel.cxx  PropagationModel.hxx  PropagationModelCustom.cxx  PropagationModelCustom.hxx  PropagationModelCustomVectorized.cxx  PropagationModelCustomVectorized.hxx  PropagationModelNeighbors.cxx  PropagationModelNeighbors.hxx  PropagationModelNeighborsVectorized.cxx  PropagationModelNeighborsVectorized.hxx  PropagationModelOriginal.cxx  PropagationModelOriginal.hxx  PropagationModelOriginalVectorized.cxx  PropagationModelOriginalVectorized.hxx  PropagationModelVectorized.cxx  PropagationModelVectorized.hxx
src/data_structures/: Matrix.cxx  Matrix.hxx  WeightedEdgeGraph.cxx  WeightedEdgeGraph.hxx
src/logging/: Logger.cxx  Logger.hxx
src/mains/: ComputationTesting.cxx  main.cxx  mainMPI.cxx  mainMPI4.cxx  mainMPI5.cxx  testingPerformance.cxx
src/testing/: ComputationTesting.cc  ComputationTestingPerturbation.cc  ConservationModelTestingVectorized.cc  DissipationModelTesting.cc  GraphTesting.cc  MatrixTesting.cc  PropagationModelTesting.cc  armaUtilitiesTesting.cc  graphUtilitiesTesting.cc  utilitiesTesting.cc
src/utils/: armaUtilities.cxx  armaUtilities.hxx  boost_ignore_numbers_parser.cxx  boost_ignore_numbers_parser.hxx  graphUtilities.cxx  graphUtilities.hxx  mathUtilities.cxx  mathUtilities.hxx  optimization.cxx  stringUtilities.cxx  stringUtilities.hxx  utilities.cxx  utilities.hxx
(+494 files in other folders)
